templates/dude/style.css
/**! Modernizing Serendipity Styx default styles START **/

/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%; }
body { margin: 0; }
/*main { display: block; }*/
h1 {
  font-size: 1.6em;
  margin: 0.67em 0; }
hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible; }
pre {
  font-family: monospace, monospace;
  font-size: 1em; }
a { background-color: transparent; }
abbr[title] {
  border-bottom: none;
  text-decoration: underline;
  text-decoration: underline dotted; }
b,
strong { font-weight: bolder; }
code,
kbd,
samp {
  font-family: monospace, monospace;
  font-size: 1em; }
small { font-size: 80%; }
sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline; }
sub { bottom: -0.25em; }
sup { top: -0.5em; }
img { border-style: none; }
button,
input,
optgroup,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0; }
button,
input {
  overflow: visible; }
button,
select {
  text-transform: none; }
button,
[type="button"],
[type="reset"],
[type="submit"] {
  -webkit-appearance: button; }
button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0; }
button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText; }
fieldset { padding: 0.35em 0.75em 0.625em; }
legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal; }
progress { vertical-align: baseline; }
textarea { overflow: auto; }
[type="checkbox"],
[type="radio"] {
  box-sizing: border-box;
  padding: 0; }
[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto; }
[type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px; }
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none; }
::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit; }
details { display: block; }
summary { display: list-item; }
template,
[hidden] {
  display: none; }

/* normalize end */

/* Render Browser default styles */

*, *:before, *:after {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box }
@-ms-viewport { width: device-width; }
ul,ol { list-style-position: inside; }

table { border-collapse: collapse; border-spacing: 0; }
td { vertical-align: top; }

/* Fonts example

@font-face {
  font-family: 'Open Sans';
  src: local('Open Sans'), local('OpenSans'),
       url('fonts/open-sans.woff2') format('woff2'),
       url('fonts/open-sans.woff') format('woff');
}
*/

/* Modern Serendipity image sizing default */

img {
    border: 0;
    vertical-align: middle;
    overflow: hidden;
    position: relative; }
embed, object, audio, video, img {
    max-width: 100%; }
img, video {
    height: auto; }

/** Theme start **/

body {
    width: 100%;
    background: #010817;
    background: linear-gradient(#09204d,#010817);
    direction: ltr;
    font-size: 1rem;
    margin: 0;
    padding: 0;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
}

/* backend preview */
body.save_preview_body {
    font-family: initial;
    background: #fff;
    font-size: 1rem;
    text-align: left; }
#content.save_preview_content {
    background: #FFF;
    border-radius: 0;
    width: 100%; }
#content.preview_preview_content {
    width: 100%; }
#content.preview_preview_content .serendipity_entryFooter {
    display: none;
    visibility: hidden; }

/* Base Mobile first Layout */
.grid, .grid-col {
    width: 100%;
    margin: 0 auto;
    height: 100vh;
    display: block;
    background: initial;
}

/* Global structures */

#serendipity_banner {
    background-color: #dbe1e6;
    height: auto;
    min-height: 128px;
    min-height: 8em;
    text-transform: lowercase;
    text-decoration: none; }
    a.homelink1, a.homelink1:hover, a.homelink1:link, a.homelink1:visited, #serendipity_banner h1 {
        color: #666;
        margin: 0;
        padding-left: .3em;
        padding-top: 1.6em; }
    a.homelink2, a.homelink2:hover, a.homelink2:link, a.homelink2:visited, #serendipity_banner h2 {
        color: #888;
        margin: 0;
        padding-left: .5em;
        font-size: 1rem; }

#content {
    background-color: #eef3f7;
    width: 100%;
}

#serendipityLeftSideBar {
    background-color: #e3e9ee;
    width: 50%
}

#serendipityRightSideBar {
    background-color: #e3e9ee;
    width: 50%
}

#content, #serendipityLeftSideBar, #serendipityRightSideBar {
    margin: 0 auto;
    padding: 0 1rem;
    display: inline-block;
}

#content {
    padding: 0;
    min-height: 184px;
}

#serendipityLeftSideBar,
#serendipityRightSideBar {
    display: inline-flex;
    flex-flow: wrap;
    justify-content: space-between;
    padding: 1em;
    width: 100vw;
}

.serendipitySideBarItem {
    margin-right: 1rem;
    min-width: 10em;
}

/* Entry paging */
.serendipity_entrypaging {
    margin: .5rem .5rem 1rem;
}

@media only screen and (min-width: 768px) {
    #content {
      min-height: 596px;
    }
}
/* ... */

